--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hint_name">Nombre</string>
     <string name="helper_required">requerido</string>
+    <string name="hint_phone">Teléfono</string>
+    <string name="hint_website">Url sitio web</string>
 </resources>
