--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="helper_required">requerido</string>
     <string name="hint_phone">Teléfono</string>
     <string name="hint_website">Url sitio web</string>
+    <string name="url_img">Url de la imagen</string>
 </resources>
