--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="hint_phone">Teléfono</string>
     <string name="hint_website">Url sitio web</string>
     <string name="url_img">Url de la imagen</string>
+    <string name="edit_store_title_add">Crear tienda</string>
 </resources>
