--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="url_img">Url de la imagen</string>
     <string name="edit_store_title_add">Crear tienda</string>
     <string name="menu_save">Añadir</string>
+    <string name="saved_correcly">Tienda agregada correctamente</string>
 </resources>
