--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="edit_store_title_add">Crear tienda</string>
     <string name="menu_save">Añadir</string>
     <string name="saved_correcly">Tienda agregada correctamente</string>
+    <string name="arg_id">arg_id</string>
 </resources>
