--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hint_name">Nombre</string>
-    <string name="helper_required">requerido</string>
+    <string name="helper_required">Requerido</string>
     <string name="hint_phone">Teléfono</string>
     <string name="hint_website">Url sitio web</string>
     <string name="url_img">Url de la imagen</string>
@@ -15,4 +15,5 @@
     <string name="arg_id">arg_id</string>
     <string name="updated_store">Tienda actualizada</string>
     <string name="created_store">Tienda añadida</string>
+    <string name="edit_store_message_valid">Revise los campos requeridos</string>
 </resources>
