--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="created_store">Tienda añadida</string>
     <string name="edit_store_message_valid">Revise los campos requeridos</string>
     <string name="edit_store_title_edit">Editar tienda</string>
+    <string name="dialog_delete_title">¿Eliminar tienda?</string>
+    <string name="dialog_delete_confirm">Eliminar</string>
+    <string name="dialog_delete_cancel">Cancelar</string>
 </resources>
