--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="dialog_delete_title">¿Eliminar tienda?</string>
     <string name="dialog_delete_confirm">Eliminar</string>
     <string name="dialog_delete_cancel">Cancelar</string>
+    <string name="dialog_opcions_title">¿Qué desea hacer?</string>
 </resources>
