--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="dialog_delete_confirm">Eliminar</string>
     <string name="dialog_delete_cancel">Cancelar</string>
     <string name="dialog_opcions_title">¿Qué desea hacer?</string>
+    <string name="no_website">Esta tienda no cuenta con web</string>
 </resources>
