--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="dialog_delete_cancel">Cancelar</string>
     <string name="dialog_opcions_title">¿Qué desea hacer?</string>
     <string name="no_website">Esta tienda no cuenta con web</string>
+    <string name="call_error">No se encontró app para procesar</string>
+    <string name="website_error">Error al navegar a la web</string>
 </resources>
