--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Stores</string>
+    <string name="app_name">Tiendas</string>
     <string name="description_img_photo">Imagen de la tienda</string>
     <string name="description_store_add">Añadir tienda</string>
     <string name="hint_name">Nombre</string>
